--- a/index.html
+++ b/index.html
@@ -1,12 +1,81 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway:200,400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <title>Tía Tomate</title>
 </head>
 <body>
+
+    <header class="header">
+        <div class="header__logo-container">
+            <img class="header__logo" src="assets/img/logo_header.png" alt="logo">
+        </div>
+    </header>
+    <section class="home">
+        <div class="home__h1-container">
+            <h1 class="home__h1">De nuestro cariño <span class="home__h1-bold">A TU MESA</span></h1>
+        </div>
+    </section>
+    <section class="description">
+        <div class="description__bg">
+            <div class="description__container-description-one">
+                <div class="description__container-img-one">
+                    <img class="description__img-one" src="assets/img/about-1.png" alt="about-1">
+                </div>
+                <h3 class="description__first-h3">Tomates 100% orgánicos</h3>
+                <p class="description__first-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium
+                    distinctio quo sequi, ut reiciendis
+                    minima alias fuga assumenda suscipit fugiat corporis mollitia inventore sapiente nobis adipisci
+                    doloremque, eos cum officiis!</p>
+            </div>
+        </div>
+        <div class="description__bg-two">
+            <div class="description__container-description-two">
+                <div class="description__container-img-two">
+                    <img class="description__img-two" src="assets/img/about-2.png" alt="about-2">
+                </div>
+                <h3 class="description__second-h3">Tomates 100% orgánicos</h3>
+                <p class="description__second-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium
+                    distinctio quo sequi, ut reiciendis
+                    minima alias fuga assumenda suscipit fugiat corporis mollitia inventore sapiente nobis adipisci
+                    doloremque, eos cum officiis!</p>
+            </div>
+        </div>
+    </section>
+    <section class="us">
+        <h2 class="us__h2">Nosotros</h2>
+        <div class="us__container-profile-one">
+            <div class="us__conatiner-img-one">
+                <img class="us__img-one" src="assets/img/about-3.png" alt="">
+            </div>
+            <h3 class="us__first-h3">Javiera kunstmann</h3>
+            <p class="us__first-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis quos qui unde
+                totam at. Exercitationem illo autem veniam nulla laborum voluptatibus quia, commodi inventore aut iste,
+                quas labore aperiam totam.</p>
+        </div>
+        <div class="us__container-profile-two">
+            <div class="us__container-img-two">
+                <img class="us__img-one" src="assets/img/about-4.png" alt="">
+            </div>
+            <h3 class="us__second-h3">Roberto Pacheco</h3>
+            <p class="us__second-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis quos qui unde
+                totam at. Exercitationem illo autem veniam nulla laborum voluptatibus quia, commodi inventore aut iste,
+                quas labore aperiam totam.</p>
+        </div>
+    </section>
+    <section class="cta">
+        <h2 class="cta__h2">¿Tomates para tu negocio?</h2>
+        <button class="cta__button" type="button">Click aqui</button>
+    </section>
+    <footer class="footer">
+        <div class="footer__container-logo">
+            <img class="footer__logo" src="assets/img/logo_footer.png" alt="logo footer">
+        </div>
+    </footer>
     
 </body>
 </html>
